Add schema config Add package.json settings Add gulp config Add react component

--- a/locales/en.default.schema.json
+++ b/locales/en.default.schema.json
@@ -612,6 +612,20 @@
         "name": "Posters"
       }
     },
+    "featured-products": {
+      "name": "Featured products",
+      "settings": {
+        "heading": {
+          "label": "Heading"
+        },
+        "products": {
+          "label": "Products"
+        }
+      },
+      "presets": {
+        "name": "Posters"
+      }
+    },
     "custom-liquid": {
       "name": "Custom Liquid",
       "settings": {
